--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,12 +21,14 @@ exclude = ["fst-levenshtein", "fst-regex"]
 [features]
 default = []
 levenshtein = ["utf8-ranges"]
+serde = ["dep:serde"]
 
 [patch.crates-io]
 fst = { path = "." }
 
 [dependencies]
 utf8-ranges = { version = "1.0.4", optional = true }
+serde = { version = "1.0.228", features = ["derive"], optional = true }
 
 [dev-dependencies]
 doc-comment = "0.3.1"
